# DEMENTpy

./: .gitignore  .pre-commit-config.yml  CONTRIBUTING.md  Dockerfile  README.md  dement.sh  dementpy.sh  dementpy_output.sh  mvoutputs.sh  pyproject.toml
.github/workflows/: testing.yaml
Documentation/: DEMENTpy Documentation.aux  DEMENTpy Documentation.fdb_latexmk  DEMENTpy Documentation.fls  DEMENTpy Documentation.tex  DEMENTpy_Documentation.tex  computation_statistics.csv
SPA/: batchjob_test.sh  mvoutputs.sh  replicate.sh  replicate_test.sh
SPA/scripts/: data_extraction.py  drought_trait.py  enzyme_trait.py  group_submit.sh  mic_community.py  sge_job.sh  slurm_job.sub  tradeoff.py
bashscripts/: batchjob.sh  batchjob2.sh  batchjob_test.sh  dementpy.sh  dementpy.sh-e  dementpy_array.sh  dementpy_test.sh  editfile.sh  file.txt  file.txt-e  jupyternb.sh  mvoutputs.sh  mvoutputs.sh-e  replicate.sh  scenario_name.sh
documentation/: DEMENTpy_Documentation.aux  DEMENTpy_Documentation.tex  literature.xlsx
grassland/: climate.csv  initial_substrates.csv  parameters.csv  runtime.txt
grassland/scrubland/: climate.csv  initial_substrates.csv  parameters.csv  runtime.txt
input/: climate.csv  enzyme_S.csv  enzyme_ea.csv  initial_substrates.csv  parameters.csv  runtime.txt  sub_mon_inputs.csv
profiling/: run_benchmarking.py
src/: .dementpy.e9512449.swp  dement.py  dementpy.py  enzyme.py  grid.py  initialization.py  library_interface.py  microbe.py  monomer.py  output.py  substrate.py  utility.py
tests/: conftest.py  test_grid.py  test_placeholder.py
(+3 files in other folders)
